traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:22: error: value += is not a member of Int
    cpt+=1
       ^